--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-masonry": "^2.1.3",
     "react-scripts": "4.0.3",
     "shards-react": "^1.0.3",
     "styled-components": "^5.3.0",
