--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-new-window": "^0.1.3",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-masonry": "^2.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "shards-react": "^1.0.3",
     "styled-components": "^5.3.0",
