--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-masonry": "^2.1.3",
