--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "mathjs": "^9.4.4",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
