--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
+    "react-image-size": "^1.0.4",
+    "react-perfect-slider": "^2.0.0",
+    "react-photo-gallery": "^8.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-masonry": "^2.1.3",
     "react-router-dom": "^5.2.0",
