--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
+    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-image-size": "^1.0.4",
