--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-image-size": "^1.0.4",
+    "react-images": "^1.2.0-beta.7",
     "react-perfect-slider": "^2.0.0",
     "react-photo-gallery": "^8.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-masonry": "^2.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactive-blueimp-gallery": "^0.2.0",
     "shards-react": "^1.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
